- Fix canvas layout issues (alignment with pixel precision when resizing)

--- a/css/custom.css
+++ b/css/custom.css
@@ -56,6 +56,10 @@ select{
   color: #F00;
 }
 
+div.float-right {
+  float:right;
+}
+
 .main {
   position: absolute;
   top: 53px;
@@ -89,6 +93,20 @@ select{
     position: absolute;
     top: 0;
     left: 0;
+/*     border: 1px solid black; */
+    border: none;
+}
+.canvaswrapper > div.canvas-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+/*     border: 1px solid black; */
+    border: none;
+}
+.ui-icon-gripsmall-diagonal-se {
+    background-position: -68px -228px;
+    width: 8px;
+    height: 8px;
 }
 
 .text label {
@@ -418,6 +436,11 @@ img.pixelated {
     border: 1px black solid;
     margin: 0px;
     padding: 0px;
+    width: 100%;
+    height: 100%;
+}
+#tagImageDiv ~ .ui-resizable-handle {
+    background-image: url("");
 }
 
 .nopad {
